--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,9 @@
-﻿/* fond de page */
+/* fond de page */
 body {
-  background-image: linear-gradient(0deg, slateblue, black, black);
+  background-image: linear-gradient(0deg, orange 60%, aqua 70%, aqua);
   background-size: 100%;
   background-repeat: no-repeat;
-  color: white;
+  color: black;
   height: 100vh;
   margin: 0;
   /* pour éviter l'ascenseur */
@@ -12,15 +12,14 @@ body {
 }
 
 /* bandeau de titre */
-h1 { 
-  color: white;
+h1 {
+  color: black;
   border: none;
   box-shadow: none;
   background-color: rgba(255,255,255,0.3);
   border-top: 3px solid rgba(255,255,255,0.6);
   border-bottom: 3px solid rgba(255,255,255,0.6);
   margin-top: 1.33em;
-  text-shadow: 3px 3px 3px black;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   margin-bottom: 1.33em;
@@ -50,4 +49,21 @@ a.delete:hover {
   content: "";
   display: table;
   clear: both;
+}
+
+table *[data-info]::before{
+  content: attr(data-info);
+}
+
+table>thead th{
+  font-size: larger;
+  font-variant: small-caps;
+}
+
+table{
+  background-color: white;
+}
+
+table>tbody th {
+  text-align: right;
 }
